--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-animate-loading-button": "^1.0.3",
+    "react-native-keyboard-aware-scroll-view": "^0.7.1",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-swiper": "^1.5.13",
-    "react-navigation": "^2.12.1"
+    "react-navigation": "^2.12.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
