--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,13 +94,15 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+compileSdkVersion 26
+  buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "com.restaurantapp"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        vectorDrawables.useSupportLibrary = true
+        aaptOptions { cruncherEnabled = false }
+        multiDexEnabled true
+        minSdkVersion 16
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
@@ -137,9 +139,10 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-linear-gradient')
+    compile project(':react-native-fast-image')
+    compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
