--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-animate-loading-button": "^1.0.3",
+    "react-native-fast-image": "^5.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.7.1",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-read-more-text": "^1.1.0",
     "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^4.6.0",
+    "react-native-view-more-text": "^2.0.1",
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
