--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
